# hasler_project

./: .gitignore  .gitmodules  .gitmodules~  todo_hasler
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: FeetOutputMsg_v2.msg  FootHapticDataMsg.msg  FootInputMsg.msg  FootInputMsg_v2.msg  FootInputMsg_v3.msg  FootInputMsg_v5.msg  FootOutputMsg.msg  FootOutputMsg_v2.msg  FootOutputMsg_v3.msg  TwoFeetOneToolMsg.msg
custom_msgs/srv/: setControllerSrv.srv  setStateSrv.srv  setStateSrv_v2.srv
demo_scientastic/: CMakeLists.txt  package.xml
demo_scientastic/include/: build_tower.h  foot_control.h  reach_target.h
demo_scientastic/launch/: gazebo.launch  visualization.rviz.launch
demo_scientastic/models/: target_plane.urdf.xacro  target_plane_on_table.urdf.xacro
demo_scientastic/src/: build_tower.cpp  build_tower_node.cpp  foot_control.cpp  foot_control_node.cpp  python_node.py  reach_target.cpp  reach_target_node.cpp  reset_boxes_pose_node.cpp  set_object_pose.cpp
demo_scientastic/worlds/: build_tower_world.world  experiment_1.world  reach_target_world.world
endoscope_feedback/: CMakeLists.txt  package.xml
endoscope_feedback/include/: endoscopeModifier.h  paramsEndoscopeModifier.h
endoscope_feedback/launch/: camera.launch  camera_manager.launch
endoscope_feedback/msg/: SurgicalTaskStateMsg.msg
endoscope_feedback/script/: camera_config.sh
endoscope_feedback/src/: camera_manager.py  endoscopeModifier.cpp  endoscopeModifier_node.cpp  image_converter copy.cpp  thresholder.py
foot_control_xy/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  package.xml
foot_control_xy/catkin_generated/: foot_control_xy-msg-extras.cmake.develspace.in  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
foot_control_xy/cfg/: protocol_params.cfg
foot_control_xy/cmake/: foot_control_xy-genmsg-context.py  foot_control_xy-genmsg.cmake
foot_control_xy/dev/: gz_model_path_update.sh  init_setup.sh
foot_control_xy/launch/: Rviz.rviz.launch  gazebo.launch  visualization.rviz.launch
foot_control_xy/rviz/: urdf.rviz
foot_control_xy/src/: Protocol.cpp  joy_control.cpp  joy_control_node.cpp  pose_generator.cpp  protocol_node.cpp  target.cpp  world_actor_tf_pub.cpp  world_actor_tf_pub_node.cpp  world_chaser_tf_pub.cpp  world_chaser_tf_pub_node.cpp
foot_control_xy/worlds/: experiment_1.world
foot_variables_log/: CMakeLists.txt  package.xml
foot_variables_log/data/: .txt
foot_variables_log/include/: FootPlatformModel.h  Pseudoinverse.h  dryFrictionLogger.h  footVarLogger.h  frictionLogger.h  viscousFrictionLogger.h
foot_variables_log/src/: FootPlatformModel.cpp  dryFrictionLogger.cpp  dryFrictionLogger_node.cpp  footVarLogger.cpp  footVarLogger_node.cpp  frictionLogger.cpp  frictionLogger_node.cpp  viscousFrictionLogger .cpp  viscousFrictionLogger_node .cpp
foot_variables_sync/: CMakeLists.txt  package.xml
foot_variables_sync/cfg/: machineStateParams.cfg
foot_variables_sync/config/: fi_gains_toolControl.yaml  fi_input.yaml  pid_states.yaml  tool_control.yaml  tool_controlMode_gains.yaml
foot_variables_sync/include/: footVarSynchronizer.h  footVarSynchronizer.h.org
foot_variables_sync/launch/: footVarSync.launch  params.launch
foot_variables_sync/src/: footVarSynchronizer.cpp  footVarSynchronizer_config.cpp  footVarSynchronizer_create.cpp  footVarSynchronizer_dynReconfig.cpp  footVarSynchronizer_gains.cpp  footVarSynchronizer_init.cpp  footVarSynchronizer_legComp.cpp  footVarSynchronizer_node.cpp  footVarSynchronizer_param.cpp  footVarSynchronizer_pub.cpp  footVarSynchronizer_run.cpp  footVarSynchronizer_srv.cpp  footVarSynchronizer_sub.cpp  footVarSynchronizer_synchronize.cpp
friction-id/: CMakeLists.txt  package.xml
friction-id/include/: lp_filter.h  multiAxisFrictionID.h
friction-id/log/: trial_run1
friction-id/src/: lp_filter.cpp  multiAxisFrictionID.cpp  multiAxisFrictionID_node.cpp
hasler_project/: CMakeLists.txt  frames.gv  package.xml
hp_preliminary_experiment/: CMakeLists.txt  README.md  package.xml  setup_custom_pythonpath.sh
hp_preliminary_experiment/cfg/: preliminaryExperiment_params.cfg
hp_preliminary_experiment/config/: optitrack.yaml
hp_preliminary_experiment/include/: KinectRecording.h  PreliminaryExperiment.h
hp_preliminary_experiment/launch/: interface_recording.launch  kinect.launch  optitrack.launch
hp_preliminary_experiment/src/: KinectRecording.cpp  PreliminaryExperiment.cpp  kinectRecording_node.cpp  preliminary_experiment_node.cpp
leg_as_robot/: CMakeLists.txt  package.xml
leg_as_robot/config/: leg_geom_data.baseline.yaml  leg_geom_data.yaml
leg_as_robot/include/: chainfdsolvertorque_wdls.h  ikfast.h  legRobot.h
leg_as_robot/launch/: both_legs.launch  chair.launch  leg.launch  leg.launch.xml  leg_and_platform.launch  leg_platform.launch  legs_and_platforms.launch  single_leg.launch
leg_as_robot/rviz/: leg_alone.rviz  leg_platform.rviz
leg_as_robot/src/: chainfdsolvertorque_wdls.cpp  ikfast61Solver.7d.cpp  legRobot.cpp  legRobot_node.cpp
leg_as_robot/urdf/: .MATLABDriveTag  leg.backup.dae  leg.create.xacro  leg.dae  leg.joints.xacro  leg.links.xacro  leg.urdf  leg.urdf.xacro  leg.yaml.xacro
mouse_platforms/: CMakeLists.txt  package.xml
mouse_platforms/include/: frictionLogger.h
mouse_platforms/src/: mousePlatform.cpp  mousePlatform_node.cpp
robotic_experiments/: CMakeLists.txt  package.xml
robotic_experiments/cfg/: feetTelemanipulation_params.cfg  sharedFourArmManipulation.cfg
robotic_experiments/config/: lwr2_controllers.yaml  lwr2_hw_interface.yaml
robotic_experiments/include/: CartesianFeetTelemanipulation.h  KukaDemo.h  PublishSphericalTrocarFrames.h  SharedFourArmManipulation.h  TrocarFeetTelemanipulation.h  jacobianRCM.h
robotic_experiments/launch/: joystick.launch  sim_lwr_trocar_constraint.launch  (+1 more)
surgical_sim/: CMakeLists.txt  package.xml
surgical_simulator/: CMakeLists.txt  package.xml
surgical_task/: CMakeLists.txt  p1.txt  p2.txt  p3.txt  p4.txt  package.xml
utils_math/: CMakeLists.txt  package.xml
(+1105 files in other folders)
