<?xml version="1.0"?>
<package>
  <name>custom_msgs</name>
  <version>1.0.0</version>
  <description>custom_ros_messages_for_foot_platforms</description>
  <maintainer email="walid.amanhoud@epfl.ch">walid</maintainer>
  <maintainer email="jacob.hernandezsanchez@epfl.ch">jacob</maintainer>
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <!--build_depend>5_axis_platform</build_depend-->

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

