<?xml version="1.0"?>
<package>
  <name>friction-id</name>
  <version>1.0.0</version>
  <description>Node_to_identify_friction_using_position_control</description>
  <maintainer email="jacob.hernandezsanchez@epfl.ch">jacob</maintainer>
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>custom_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>utils</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>custom_msgs</run_depend>  
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>utils</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

