<package>
  <name>hasler_project</name>
  <version>1.3.1</version>
  <description> This is the metapackage containing the modules used for experiments in the hasler project for surgical robotics</description>
  <maintainer email="jacob.hernandezsanchez@epfl.ch">jacob</maintainer>
  <maintainer email="walid.amanhoud@epfl.ch">jacob</maintainer>
  <maintainer email="anais.haget@epfl.ch">jacob</maintainer>
  
  <license>BSD</license> 

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>hp_preliminary_experiment</run_depend>
  <run_depend>foot_control_xy</run_depend>
  <run_depend>custom_msgs</run_depend>
  <run_depend>demo_scientastic</run_depend>
  <run_depend>surgical_simulator</run_depend>
  <run_depend>foot_variables_sync</run_depend>
  <run_depend>multiaxis_friction_identification</run_depend>
  <run_depend>rokubimini_ros</run_depend>
  <run_depend>surgical_sim</run_depend>
  <run_depend>utils_math</run_depend>
  <run_depend>utils</run_depend>
  <run_depend>friction-id</run_depend>
  <run_depend>foot_platform_ros</run_depend>
  <run_depend>leg_as_robot</run_depend>
  <run_depend>custom_msgs_gripper</run_depend>


  

</package>

