<?xml version="1.0"?>
<package>
  <name>surgical_simulator</name>
  <version>1.0.0</version>
  <description>The surgical_simulator package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="walid.amanhoud@epfl.ch">walid</maintainer>
  <maintainer email="jacob.hernandez@epfl.ch">jacob</maintainer>
  <maintainer email="anais.haget@epfl.ch">jacob</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>custom_msgs</build_depend>
  <build_depend>utils</build_depend>
  <build_depend>utils_math</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>custom_msgs</run_depend>
  <run_depend>utils</run_depend>
  <run_depend>utils_math</run_depend>


  <export>
	<gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
	
</package>
